[tool.poetry]
name = "987"
version = "1.0.0"
description = "2048 but fibonacci"
authors = ["Khaleel Al-Adhami <khaleel.aladhami@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.6.5"
reflex-global-hotkey = "^1.1.1"
reflex-swipe = "^1.0.0"
reflex-motion = {git = "https://github.com/Alek99/reflex-motion.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
