[project]
name = "987"
version = "1.0.0"
description = "2048 but fibonacci"
authors = [{ name = "Khaleel Al-Adhami", email = "khaleel.aladhami@gmail.com" }]
license.text = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex >=0.7.11",
    "reflex-global-hotkey >=1.2.2",
    "reflex-swipe >=1.1.1",
    "reflex-motion @ git+https://github.com/Alek99/reflex-motion.git",
]

[tool.ruff]
target-version = "py312"

[tool.pyright]